--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.19.0",
     "@types/node": "20.8.10",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^4.2.1",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
@@ -28,6 +30,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "prisma": "^5.5.2"
+    "@types/bcryptjs": "^2.4.6",
+    "prisma": "^5.19.0"
   }
 }
